# agent-environment

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  main.yml
agent_environment/: __init__.py  base.py  environment.py  exceptions.py  file_operator.py  protocols.py  resources.py  shell.py  types.py  utils.py
tests/: __init__.py  conftest.py  test_base.py  test_environment.py  test_exceptions.py  test_file_operator.py  test_protocols.py  test_resources.py  test_utils.py
